--- a/src/app/view/call-list/call-list.component.html
+++ b/src/app/view/call-list/call-list.component.html
@@ -1,1 +1,56 @@
 <h2>Call List</h2>
+
+<form #callSearchForm="ngForm">
+    <div class="searchBar">
+        <div class="searchBarCol">
+            <h4>Call Type</h4>
+            <mat-form-field appearance="fill">
+                <mat-label>Select a Type</mat-label>
+                <mat-select [(ngModel)]="callSearchForm.type" name="type">
+                    <mat-option *ngFor="let type of types" [value]="type">
+                        {{type}}
+                    </mat-option>
+                </mat-select>
+            </mat-form-field>
+        </div>
+
+        <div class="searchBarCol">
+            <h4>Date sold</h4>
+            <mat-form-field appearance="fill">
+                <mat-label>Choose a date</mat-label>
+                <input matInput [matDatepicker]="startDate" [(ngModel)]="callSearchForm.startDate" name="startDate">
+                <mat-datepicker-toggle matSuffix [for]="startDate"></mat-datepicker-toggle>
+                <mat-datepicker #startDate></mat-datepicker>
+            </mat-form-field>
+        </div>
+
+        <div class="searchBarCol">
+            <h4>To</h4>
+            <mat-form-field appearance="fill">
+                <mat-label>Choose a date</mat-label>
+                <input matInput [matDatepicker]="endDate" [(ngModel)]="callSearchForm.endDate" name="endDate">
+                <mat-datepicker-toggle matSuffix [for]="endDate"></mat-datepicker-toggle>
+                <mat-datepicker #endDate></mat-datepicker>
+            </mat-form-field>
+        </div>
+
+        <div class="searchBarCol">
+            <h4>Status</h4>
+            <mat-form-field appearance="fill">
+                <mat-label>Select a Status</mat-label>
+                <mat-select [(ngModel)]="callSearchForm.status" name="status">
+                    <mat-option *ngFor="let status of statuses" [value]="status">
+                        {{status}}
+                    </mat-option>
+                </mat-select>
+            </mat-form-field>
+        </div>
+
+        <div class="searchButtonCol">
+            <button class="searchButton" mat-raised-button color="primary" (click)="searchCall(callSearchForm)">
+                <mat-icon aria-hidden="false">search</mat-icon> 
+                Search
+            </button>
+        </div>
+    </div>
+</form>
