--- a/src/app/view/call-list/call-list.component.html
+++ b/src/app/view/call-list/call-list.component.html
@@ -48,9 +48,45 @@
 
         <div class="searchButtonCol">
             <button class="searchButton" mat-raised-button color="primary" (click)="searchCall(callSearchForm)">
-                <mat-icon aria-hidden="false">search</mat-icon> 
+                <mat-icon aria-hidden="false">search</mat-icon>
                 Search
             </button>
         </div>
     </div>
 </form>
+
+<div class="tableDiv">
+    <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+
+        <!--- Note that these columns can be defined in any order.
+              The actual rendered columns are set as a property on the row definition" -->
+
+        <!-- Position Column -->
+        <ng-container matColumnDef="name">
+            <th mat-header-cell *matHeaderCellDef> Name </th>
+            <td mat-cell *matCellDef="let call"> {{call.name}} </td>
+        </ng-container>
+
+        <!-- Name Column -->
+        <ng-container matColumnDef="date">
+            <th mat-header-cell *matHeaderCellDef> Date Sold </th>
+            <td mat-cell *matCellDef="let call"> {{call.date}} </td>
+        </ng-container>
+
+        <!-- Weight Column -->
+        <ng-container matColumnDef="type">
+            <th mat-header-cell *matHeaderCellDef> Type </th>
+            <td mat-cell *matCellDef="let call"> {{call.type}} </td>
+        </ng-container>
+
+        <!-- Symbol Column -->
+        <ng-container matColumnDef="status">
+            <th mat-header-cell *matHeaderCellDef> Status </th>
+            <td mat-cell *matCellDef="let call"> {{call.status}} </td>
+        </ng-container>
+
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row (click)="setSelectedCall(row)"
+            *matRowDef="let row; columns: displayedColumns;"></tr>
+    </table>
+</div>
