--- a/src/app/view/call-list/call-list.component.html
+++ b/src/app/view/call-list/call-list.component.html
@@ -38,9 +38,9 @@
             <h4>Status</h4>
             <mat-form-field appearance="fill">
                 <mat-label>Select a Status</mat-label>
-                <mat-select [(ngModel)]="callSearchForm.status" name="status">
-                    <mat-option *ngFor="let status of statuses" [value]="status">
-                        {{status}}
+                <mat-select [(ngModel)]="callSearchForm.callStatus" name="callStatus">
+                    <mat-option *ngFor="let callStatus of statuses" [value]="callStatus">
+                        {{callStatus}}
                     </mat-option>
                 </mat-select>
             </mat-form-field>
@@ -70,7 +70,7 @@
         <!-- Name Column -->
         <ng-container matColumnDef="date">
             <th mat-header-cell *matHeaderCellDef> Date Sold </th>
-            <td mat-cell *matCellDef="let call"> {{call.date}} </td>
+            <td mat-cell *matCellDef="let call"> {{call.date | date}} </td>
         </ng-container>
 
         <!-- Weight Column -->
@@ -82,7 +82,7 @@
         <!-- Symbol Column -->
         <ng-container matColumnDef="status">
             <th mat-header-cell *matHeaderCellDef> Status </th>
-            <td mat-cell *matCellDef="let call"> {{call.status}} </td>
+            <td mat-cell *matCellDef="let call"> {{call.callStatus}} </td>
         </ng-container>
 
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
