--- a/src/app/view/call-list/call-list.component.css
+++ b/src/app/view/call-list/call-list.component.css
@@ -1,7 +1,13 @@
+h1 {
+    text-align: center;
+}
+
 .searchBar {
     display: flex;
-    margin-left: 350px;
-    margin-right: 350px;
+    width: 1200px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 50px;
 }
 
 .searchBarCol {
@@ -18,13 +24,11 @@
     padding-top: 60px;
     width: 100%;
 }
-
-.tableDiv {
-    margin: 50px 350px 50px 350px;
-}
-
+   
 table {
-    width: 100%;
+    margin-left: auto;
+    margin-right: auto;
+    width: 1200px;
 }
 
 .mat-header-cell {
