--- a/src/app/view/call-list/call-list.component.css
+++ b/src/app/view/call-list/call-list.component.css
@@ -1,12 +1,16 @@
+.main-content {
+    width: 1200px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
 h1 {
     text-align: center;
 }
 
 .searchBar {
     display: flex;
-    width: 1200px;
-    margin-left: auto;
-    margin-right: auto;
+    
     margin-bottom: 50px;
 }
 
@@ -26,9 +30,8 @@ h1 {
 }
    
 table {
-    margin-left: auto;
-    margin-right: auto;
-    width: 1200px;
+    width: 100%;
+    margin-bottom: 20px;
 }
 
 .mat-header-cell {
@@ -40,4 +43,8 @@ table {
 .mat-row:hover .mat-cell {
     background-color: #673ab7;
     color: #ffffff;
+}
+
+.makeCallButton, p{
+    float: right;
 }
