--- a/src/app/view/call-list/call-list.component.html
+++ b/src/app/view/call-list/call-list.component.html
@@ -1,85 +1,94 @@
-<h1>Call List</h1>
+<div class="main-content">
+    <h1>Call List</h1>
 
-<form #callSearchForm="ngForm">
-    <div class="searchBar">
-        <div class="searchBarCol">
-            <h4>Call Type</h4>
-            <mat-form-field appearance="fill">
-                <mat-label>Select a Type</mat-label>
-                <mat-select [(ngModel)]="callSearchForm.type" name="type">
-                    <mat-option *ngFor="let type of types" [value]="type">
-                        {{type}}
-                    </mat-option>
-                </mat-select>
-            </mat-form-field>
-        </div>
+    <form #callSearchForm="ngForm">
+        <div class="searchBar">
+            <div class="searchBarCol">
+                <h4>Call Type</h4>
+                <mat-form-field appearance="fill">
+                    <mat-label>Select a Type</mat-label>
+                    <mat-select [(ngModel)]="callSearchForm.type" name="type">
+                        <mat-option *ngFor="let type of types" [value]="type">
+                            {{type}}
+                        </mat-option>
+                    </mat-select>
+                </mat-form-field>
+            </div>
 
-        <div class="searchBarCol">
-            <h4>Date sold</h4>
-            <mat-form-field appearance="fill">
-                <mat-label>Choose a date</mat-label>
-                <input matInput [matDatepicker]="startDate" [(ngModel)]="callSearchForm.startDate" name="startDate">
-                <mat-datepicker-toggle matSuffix [for]="startDate"></mat-datepicker-toggle>
-                <mat-datepicker #startDate></mat-datepicker>
-            </mat-form-field>
-        </div>
+            <div class="searchBarCol">
+                <h4>Date sold</h4>
+                <mat-form-field appearance="fill">
+                    <mat-label>Choose a date</mat-label>
+                    <input matInput [matDatepicker]="startDate" [(ngModel)]="callSearchForm.startDate" name="startDate">
+                    <mat-datepicker-toggle matSuffix [for]="startDate"></mat-datepicker-toggle>
+                    <mat-datepicker #startDate></mat-datepicker>
+                </mat-form-field>
+            </div>
 
-        <div class="searchBarCol">
-            <h4>To</h4>
-            <mat-form-field appearance="fill">
-                <mat-label>Choose a date</mat-label>
-                <input matInput [matDatepicker]="endDate" [(ngModel)]="callSearchForm.endDate" name="endDate">
-                <mat-datepicker-toggle matSuffix [for]="endDate"></mat-datepicker-toggle>
-                <mat-datepicker #endDate></mat-datepicker>
-            </mat-form-field>
-        </div>
+            <div class="searchBarCol">
+                <h4>To</h4>
+                <mat-form-field appearance="fill">
+                    <mat-label>Choose a date</mat-label>
+                    <input matInput [matDatepicker]="endDate" [(ngModel)]="callSearchForm.endDate" name="endDate">
+                    <mat-datepicker-toggle matSuffix [for]="endDate"></mat-datepicker-toggle>
+                    <mat-datepicker #endDate></mat-datepicker>
+                </mat-form-field>
+            </div>
 
-        <div class="searchBarCol">
-            <h4>Status</h4>
-            <mat-form-field appearance="fill">
-                <mat-label>Select a Status</mat-label>
-                <mat-select [(ngModel)]="callSearchForm.callStatus" name="callStatus">
-                    <mat-option *ngFor="let callStatus of statuses" [value]="callStatus">
-                        {{callStatus}}
-                    </mat-option>
-                </mat-select>
-            </mat-form-field>
-        </div>
+            <div class="searchBarCol">
+                <h4>Status</h4>
+                <mat-form-field appearance="fill">
+                    <mat-label>Select a Status</mat-label>
+                    <mat-select [(ngModel)]="callSearchForm.callStatus" name="callStatus">
+                        <mat-option *ngFor="let callStatus of statuses" [value]="callStatus">
+                            {{callStatus}}
+                        </mat-option>
+                    </mat-select>
+                </mat-form-field>
+            </div>
 
-        <div class="searchButtonCol">
-            <button class="searchButton" mat-raised-button color="primary" (click)="searchCall(callSearchForm)">
-                <mat-icon aria-hidden="false">search</mat-icon>
-                Search
-            </button>
+            <div class="searchButtonCol">
+                <button class="searchButton" mat-raised-button color="primary" (click)="searchCall(callSearchForm)">
+                    <mat-icon aria-hidden="false">search</mat-icon>
+                    Search
+                </button>
+            </div>
         </div>
+    </form>
+
+    <div class="tableDiv">
+        <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+            <ng-container matColumnDef="name">
+                <th mat-header-cell *matHeaderCellDef> Name </th>
+                <td mat-cell *matCellDef="let call"> {{call.name}} </td>
+            </ng-container>
+
+            <ng-container matColumnDef="date">
+                <th mat-header-cell *matHeaderCellDef> Date Sold </th>
+                <td mat-cell *matCellDef="let call"> {{call.date | date}} </td>
+            </ng-container>
+
+            <ng-container matColumnDef="type">
+                <th mat-header-cell *matHeaderCellDef> Type </th>
+                <td mat-cell *matCellDef="let call"> {{call.type}} </td>
+            </ng-container>
+
+            <ng-container matColumnDef="status">
+                <th mat-header-cell *matHeaderCellDef> Status </th>
+                <td mat-cell *matCellDef="let call"> {{call.callStatus}} </td>
+            </ng-container>
+
+            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+            <tr mat-row (click)="setSelectedCall(row)" *matRowDef="let row; columns: displayedColumns;"></tr>
+        </table>
     </div>
-</form>
 
-<div class="tableDiv">
-    <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
-        <ng-container matColumnDef="name">
-            <th mat-header-cell *matHeaderCellDef> Name </th>
-            <td mat-cell *matCellDef="let call"> {{call.name}} </td>
-        </ng-container>
-
-        <ng-container matColumnDef="date">
-            <th mat-header-cell *matHeaderCellDef> Date Sold </th>
-            <td mat-cell *matCellDef="let call"> {{call.date | date}} </td>
-        </ng-container>
-
-        <ng-container matColumnDef="type">
-            <th mat-header-cell *matHeaderCellDef> Type </th>
-            <td mat-cell *matCellDef="let call"> {{call.type}} </td>
-        </ng-container>
-
-        <ng-container matColumnDef="status">
-            <th mat-header-cell *matHeaderCellDef> Status </th>
-            <td mat-cell *matCellDef="let call"> {{call.callStatus}} </td>
-        </ng-container>
-
-        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row (click)="setSelectedCall(row)"
-            *matRowDef="let row; columns: displayedColumns;"></tr>
-    </table>
+    <p>{{currentCall ? currentCall.name : 'Select a call'}}</p>
+    <br>
+    <br>
+    <br>
+    <button *ngIf="currentCall" [routerLink]="['/calls', currentCall.customerId]" class="makeCallButton" mat-raised-button color="primary" >
+        <mat-icon aria-hidden="false">call</mat-icon>
+        Make call
+    </button>
 </div>
-
