refactor: disable button when not selected a call

--- a/src/app/view/call-list/call-list.component.html
+++ b/src/app/view/call-list/call-list.component.html
@@ -91,4 +91,8 @@
         <mat-icon aria-hidden="false">call</mat-icon>
         Make call
     </button>
+    <button *ngIf="!currentCall" disabled class="makeCallButton" mat-raised-button color="primary" >
+        <mat-icon aria-hidden="false">call</mat-icon>
+        Make call
+    </button>
 </div>
