feature: added min and max date range picker

--- a/src/app/view/call-list/call-list.component.html
+++ b/src/app/view/call-list/call-list.component.html
@@ -19,7 +19,7 @@
                 <h4>Date sold</h4>
                 <mat-form-field appearance="fill">
                     <mat-label>Choose a date</mat-label>
-                    <input matInput [matDatepicker]="startDate" [(ngModel)]="callSearchForm.startDate" name="startDate">
+                    <input matInput [matDatepicker]="startDate" [(ngModel)]="callSearchForm.startDate" name="startDate" [max]="callSearchForm.endDate">
                     <mat-datepicker-toggle matSuffix [for]="startDate"></mat-datepicker-toggle>
                     <mat-datepicker #startDate></mat-datepicker>
                 </mat-form-field>
@@ -29,7 +29,7 @@
                 <h4>To</h4>
                 <mat-form-field appearance="fill">
                     <mat-label>Choose a date</mat-label>
-                    <input matInput [matDatepicker]="endDate" [(ngModel)]="callSearchForm.endDate" name="endDate">
+                    <input matInput [matDatepicker]="endDate" [(ngModel)]="callSearchForm.endDate" name="endDate" [min]="callSearchForm.startDate">
                     <mat-datepicker-toggle matSuffix [for]="endDate"></mat-datepicker-toggle>
                     <mat-datepicker #endDate></mat-datepicker>
                 </mat-form-field>
